--- a/sitemap.org
+++ b/sitemap.org
@@ -1,19 +1,27 @@
 #+TITLE: Sitemap for project org-notes
 
    + [[file:about.org][about]]
+   + [[file:awk_notes.org][Awk 笔记]]
    + [[file:C++_Notes.org][C++ Notes]]
    + Color Scheme Colection [[file:color_schemes.org][配色收集]]
    + [[file:emacs_notes.org][Emacs Notes]]
    + [[file:htdp.org][How to Design Programs Notes]]
    + [[file:theindex.org][Index]]
+   + [[file:latex_notes.org][LaTeX 笔记]]
+   + [[file:linux_notes.org][Linux Notes]]
+   + [[file:RAID.org][Linux RAID 设置]]
    + [[file:index.org][Mark Wallace's Wiki]]
    + [[file:python_notes.org][python Notes]]
    + [[file:racket_notes.org][Racket Notes]]
    + [[file:remember.org][remember]]
    + [[file:slackware_notes.org][Slackware Notes]]
    + [[file:test_org.org][Test Org Syntax]]
+   + [[file:tex_notes.org][TeX/LaTeX Notes]]
+   + [[file:tex_resources.org][TeX/LaTeX 资源]]
    + [[file:Thinking_In_Cpp.org][Thinking In C++ Notes]]
+   + [[file:tikz.org][Tikz Notes]]
    + [[file:Unix_Network_Programming_v2.org][UNIX Network Programming Vol.2 Notes]]
+   + [[file:wine_notes.org][wine 笔记]]
    + [[file:Books.org][书籍]]
    + [[file:how_wiki_is_built.org][本站是如何搭建的]]
    + [[file:interview.org][面试技能收集]]
