--- a/emacs_notes.org
+++ b/emacs_notes.org
@@ -21,6 +21,21 @@
       that KEY is bound to.
 ** Mark and the region
 
+** kill ring
+   Emacs will save the contens yanked by =C-k= or =M-w=. We can
+   paste/yank the contents last killed by press =C-y=. But if we want
+   the contens earlier, we can press =M-y= multiple times after press
+   =C=y=. 
+   
+* Eshell
+** Visual Commands
+   Some commands are not sufficient to run inside eshell, such as
+   =top=. They are supported by =Term= mode. We can add these commands
+   into =eshell-visual-commands= to make eshell invoke =term= mode automatically.
+   
+** References
+   - [[http://www.masteringemacs.org/articles/2010/12/13/complete-guide-mastering-eshell/][Complete Guide to Mastering Eshell]]
+
 * FAQs
 ** How to insert not graphic characters?
 1. Insert =C-q= First.
