--- a/sitemap.org
+++ b/sitemap.org
@@ -1,16 +1,25 @@
 #+TITLE: Sitemap for project org-notes
 
    + [[file:about.org][about]]
-   + [[file:awk_notes.org][Awk 笔记]]
+   + [[file:awk_notes.org][Awk ç¬è®°]]
+   + [[file:c_notes.org][C Notes]]
    + [[file:C++_Notes.org][C++ Notes]]
    + Color Scheme Colection [[file:color_schemes.org][配色收集]]
+   + [[file:compiler_design_in_c.org][Compiler Design in C]]
    + [[file:emacs_notes.org][Emacs Notes]]
+   + [[file:git_notes.org][Git 笔记]]
+   + [[file:hibernate.org][Hibernate Notes]]
    + [[file:htdp.org][How to Design Programs Notes]]
    + [[file:theindex.org][Index]]
+   + [[file:java_notes.org][JAVA Notes]]
+   + [[file:java.org][Java Notes]]
+   + [[file:jsf.org][JSF Notes]]
    + [[file:latex_notes.org][LaTeX 笔记]]
    + [[file:linux_notes.org][Linux Notes]]
    + [[file:RAID.org][Linux RAID 设置]]
+   + [[file:make.org][Make FAQ]]
    + [[file:index.org][Mark Wallace's Wiki]]
+   + [[file:maven.org][maven]]
    + [[file:python_notes.org][python Notes]]
    + [[file:racket_notes.org][Racket Notes]]
    + [[file:remember.org][remember]]
@@ -23,7 +32,7 @@
    + [[file:tikz.org][Tikz Notes]]
    + [[file:Unix_Network_Programming_v2.org][UNIX Network Programming Vol.2 Notes]]
    + [[file:vim_notes.org][vim 笔记]]
-   + [[file:wine_notes.org][wine 笔记]]
+   + [[file:wine_notes.org][wine ç¬è®°]]
    + [[file:Books.org][书籍]]
    + [[file:Information_Retrieval.org][信息检索]]
    + [[file:how_wiki_is_built.org][本站是如何搭建的]]
