--- a/sitemap.org
+++ b/sitemap.org
@@ -6,13 +6,16 @@
    + [[file:C++_Notes.org][C++ Notes]]
    + Color Scheme Colection [[file:color_schemes.org][配色收集]]
    + [[file:compiler_design_in_c.org][Compiler Design in C]]
+   + [[file:css_notes.org][CSS Notes]]
    + [[file:emacs_notes.org][Emacs Notes]]
+   + [[file:fonts.org][Fonts]]
    + [[file:git_notes.org][Git 笔记]]
    + [[file:hibernate.org][Hibernate Notes]]
    + [[file:htdp.org][How to Design Programs Notes]]
    + [[file:theindex.org][Index]]
    + [[file:java_notes.org][JAVA Notes]]
    + [[file:java.org][Java Notes]]
+   + [[file:javascript.org][JavaScript Notes]]
    + [[file:jsf.org][JSF Notes]]
    + [[file:latex_notes.org][LaTeX 笔记]]
    + [[file:linux_notes.org][Linux Notes]]
@@ -24,6 +27,7 @@
    + [[file:racket_notes.org][Racket Notes]]
    + [[file:remember.org][remember]]
    + [[file:slackware_notes.org][Slackware Notes]]
+   + [[file:sql_note.org][SQL Notes]]
    + [[file:stl.org][STL 简明教程]]
    + [[file:test_org.org][Test Org Syntax]]
    + [[file:tex_notes.org][TeX/LaTeX Notes]]
