--- a/sitemap.org
+++ b/sitemap.org
@@ -4,12 +4,15 @@
    + [[file:awk_notes.org][Awk 笔记]]
    + [[file:c_notes.org][C Notes]]
    + [[file:C++_Notes.org][C++ Notes]]
+   + [[file:clojure_notes.org][Clojure Notes]]
    + [[file:clojure_web_development.org][Clojure Web Development]]
    + [[file:clojurescript.org][ClojureScript Notes]]
    + Color Scheme Colection [[file:color_schemes.org][配色收集]]
    + [[file:compiler_design_in_c.org][Compiler Design in C]]
+   + [[file:core_async.org][Core.async Notes]]
    + [[file:css_notes.org][CSS Notes]]
    + [[file:css_note.org][CSS Notes]]
+   + [[file:emacs-helm.org][Emacs Helm Notes]]
    + [[file:emacs_notes.org][Emacs Notes]]
    + [[file:fonts.org][Fonts]]
    + [[file:git_notes.org][Git 笔记]]
@@ -29,8 +32,11 @@
    + [[file:index.org][Mark Wallace's Wiki]]
    + [[file:maven.org][maven]]
    + [[file:color_theory.org][Notes on Color Theory]]
+   + [[file:pdf.org][PDF file format]]
+   + [[file:pip.org][pip Notes]]
    + [[file:python_notes.org][python Notes]]
    + [[file:racket_notes.org][Racket Notes]]
+   + [[file:reagent.org][Reagent Tutorial]]
    + [[file:remember.org][remember]]
    + [[file:slackware_notes.org][Slackware Notes]]
    + [[file:sql_note.org][SQL Notes]]
@@ -46,5 +52,6 @@
    + [[file:wine_notes.org][wine 笔记]]
    + [[file:Books.org][书籍]]
    + [[file:Information_Retrieval.org][信息检索]]
+   + [[file:japanese_notes.org][日语学习]]
    + [[file:how_wiki_is_built.org][本站是如何搭建的]]
    + [[file:interview.org][面试技能收集]]
